--- a/JS_OC/First.html
+++ b/JS_OC/First.html
@@ -26,7 +26,7 @@
         </script>
     </header>
     
-    <body>
+    <body style="width:100%; height:100%;">
         <h2> 这里是第一种方式 </h2>
         <br/>
         <br/>
