添加UIWebView使用JavaScriptCore来实现交互的例子

--- a/JS_OC_MessageHandler/JS_OC_MessageHandler/index.html
+++ b/JS_OC_MessageHandler/JS_OC_MessageHandler/index.html
@@ -7,7 +7,7 @@
             }
                 
             function shareClick() {
-                window.webkit.messageHandlers.Share.postMessage({title:'测试分享的标题',content:'测试分享的内容',url:'http://www.baidu.com'});
+                window.webkit.messageHandlers.Share.postMessage({title:'测试分享的标题',content:'测试分享的内容',url:'http://m.rblcmall.com/share/openShare.htm?share_uuid=shdfxdfdsfsdfs&share_url=http://m.rblcmall.com/store_index_32787.htm&imagePath=http://c.hiphotos.baidu.com/image/pic/item/f3d3572c11dfa9ec78e256df60d0f703908fc12e.jpg'});
             }
             
             function locationClick() {
