添加WebViewJavascriptBridge的示例

--- a/JS_OC_URL/JS_OC_URL/index.html
+++ b/JS_OC_URL/JS_OC_URL/index.html
@@ -16,6 +16,7 @@
                     iFrame = null;
                 }
             function scanClick() {
+                alert(arr);
                 loadURL("haleyAction://scanClick");
             }
                 
