--- a/JS_OC_URL/JS_OC_URL/index.html
+++ b/JS_OC_URL/JS_OC_URL/index.html
@@ -16,7 +16,7 @@
                     iFrame = null;
                 }
             function scanClick() {
-                alert(arr);
+                asyncAlert(arr);
                 loadURL("haleyAction://scanClick");
             }
                 
